--- a/src/app/demo/components/submajorhead/submajorhead.component.html
+++ b/src/app/demo/components/submajorhead/submajorhead.component.html
@@ -14,8 +14,8 @@
     
           <div class="mb-4 mt-3">
             <label class="text-2xl" for="firstname2">Select MajorHead_ID <span class="red"> *</span> : </label>
-            <p-dropdown class="ml-3" [style]="{'width':'72%'}" [options]="codes" formControlName="majorheadcode"
-              placeholder="Select MajorHead_ID" optionLabel="code" optionValue="code"optionValue="id" >
+            <p-dropdown class="ml-3" [style]="{'width':'64%'}" [options]="codes" formControlName="majorheadcode"
+              placeholder="Select MajorHead ID" optionLabel="name" optionValue="id" >
               <ng-template let-option pTemplate="item">
                 {{ option.code }} : {{ option.name }}
               </ng-template>
