--- a/src/app/demo/components/minorhead/minorhead.component.html
+++ b/src/app/demo/components/minorhead/minorhead.component.html
@@ -92,8 +92,8 @@
     <p-toast></p-toast>
   </div>
   
-  <mh-prime-dynamic-table *ngIf="tableData!=null||tableData!=undefined" size="small" [numberRowsShown]="10"
-    [rowsPerPageOptions]="[10, 30, 50]" [headers]="tableData.headers" [data]="tableData.data" rowSelectionMode="multiple"
-    [dataCount]="alldata" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
+  <mh-prime-dynamic-table size="small" [numberRowsShown]="10"
+    [rowsPerPageOptions]="[10, 30, 50]"  [data]="tableData" rowSelectionMode="multiple"
+    [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
     (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)">
   </mh-prime-dynamic-table>
