--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -14,7 +14,7 @@
     <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
         [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
   
-        <div class="mb-4 mt-3">
+        <!-- <div class="mb-4 mt-3">
           <label class="text-2xl" for="firstname2">Select MinorHeadID<span class="red"> *</span> : </label>
           <p-dropdown class="ml-3" [style]="{'width':'65%'}" [options]="codes" formControlName="minorHeadId"
             placeholder="Select MinorHead ID"  optionLabel="name" optionValue="id">
@@ -25,7 +25,7 @@
           <div *ngIf="userForm.get('minorHeadId')?.invalid && userForm.get('minorHeadId')?.touched" class="error">
             MinorHeadID is required.
           </div>
-        </div>
+        </div> -->
           <div class="formgrid grid">
             <div class="field col">
                 <label class="text-2xl" for="firstname2">Demand Code*</label>
@@ -51,7 +51,7 @@
             </div>
           </div>
           </div>
-          <!-- <div class="formgrid grid">
+          <div class="formgrid grid">
             <div class="field col">
               <label class="text-2xl" for="lastname2">Minor Head Id*</label>
               <input id="lastname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="minorHeadId">
@@ -59,7 +59,7 @@
                 Minor Head ID is required.
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- <div class="field col">
             <label class="text-2xl" for="firstname2">Phone*</label>
             <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Phone">
