--- a/src/app/demo/components/mastersubdetailhead/mastersubdetailhead.component.html
+++ b/src/app/demo/components/mastersubdetailhead/mastersubdetailhead.component.html
@@ -2,6 +2,12 @@
   style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
   <h2 style="color: white;font-family: sans-serif;">Sub Detail Head Table</h2>
+  <p-button class="" (click)="showDeletedData()" label="SEE DELETED SUB DETAIL HEAD">
+    <i class="pi pi-eye mr-2"></i>
+  </p-button>
+  <p-button class="" (click)="showNormalData()" label="SEE SUB DETAIL HEAD">
+    <i class="pi pi-eye mr-2"></i>
+  </p-button>
   <p-button class="mb-10" (click)="show()" label="ADD Sub Detail Head">
     <i class="pi pi-plus mr-3"></i>
   </p-button>
