--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -16,7 +16,7 @@
   
         <div class="mb-4 mt-3">
           <label class="text-2xl" for="firstname2">Select MinorHeadID<span class="red"> *</span> : </label>
-          <p-dropdown class="ml-3" [style]="{'width':'65%'}" [options]="codes" formControlName="minorHeadId"
+          <p-dropdown class="ml-3" [virtualScroll]="true" [virtualScrollItemSize]="30" [style]="{'width':'65%'}" [options]="codes" formControlName="minorHeadId"
             placeholder="Select MinorHead ID"  optionLabel="name" optionValue="id">
             <ng-template let-option pTemplate="item">
           {{ option.code }} : {{ option.name }}
