--- a/src/app/demo/components/majorhead/majorhead.component.html
+++ b/src/app/demo/components/majorhead/majorhead.component.html
@@ -71,6 +71,6 @@
     [actionButtons]="actionButtonConfig"
     (rowSelect)="handleRowSelection($event)"
     (actionButtonClicked)="handleButtonClick($event)"
-    (queryParameterChange)="handQueryParameterChange($event)"
+    (queryParameterChange)="handQueryParameterChange($event)"[isLoading]="istableLoading" [showTopMenubar]="false" [showGlobalSearch]="false"
   >
   </mh-prime-dynamic-table>
