--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -111,6 +111,6 @@
     [actionButtons]="actionButtonConfig"
     (rowSelect)="handleRowSelection($event)"
     (actionButtonClicked)="handleButtonClick($event)"
-    (queryParameterChange)="handQueryParameterChange($event)" [isLoading]="istableLoading" [showTopMenubar]="false" [showGlobalSearch]="false"
+    (queryParameterChange)="handQueryParameterChange($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false"
   >
   </mh-prime-dynamic-table>
