--- a/src/app/demo/components/submajorhead/submajorhead.component.html
+++ b/src/app/demo/components/submajorhead/submajorhead.component.html
@@ -82,6 +82,6 @@
       [actionButtons]="actionButtonConfig"
       (rowSelect)="handleRowSelection($event)"
       (actionButtonClicked)="handleButtonClick($event)"
-      (queryParameterChange)="handQueryParameterChange($event)"[isLoading]="istableLoading" [showTopMenubar]="false" [showGlobalSearch]="false"
+      (queryParameterChange)="handQueryParameterChange($event)"[isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false"
     >
     </mh-prime-dynamic-table>
