--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -1,93 +1,186 @@
 <div class="grid">
     <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+        <p-card header="DDO" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total DDO
+                <span style="margin-left: 28%;">:</span>
+                <span id="totalDDO" style="margin-left: 7%;">0</span>
+            </p>        
+            <p style="font-size: large;">Total Active DDO
+                <span style="margin-left: 12%;">:</span>
+                <span id="totalActiveDDO" style="margin-left: 7%;">0</span>    
+            </p>
+            <p style="font-size: large;">Total Inactive DDO 
+                <span style="margin-left: 8%;">:</span> 
+                <span id="totalInactiveDDO" style="margin-left: 7%;">0</span>
+            </p>
+           
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                <!--  -->
             </ng-template>
         </p-card>
     </div>
+    
     <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+        <p-card header="DETAIL HEEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total DETAIL HEEAD 
+                <span style="margin-left: 22%;">:</span>
+                <span id="totalDetailHead" style="margin-left: 7%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active DETAIL HEEAD 
+                <span style="margin-left: 6%;">:</span>
+                <span id="totalActiveDetailHead" style="margin-left: 7%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive DETAIL HEEAD 
+                <span style="margin-left: 3%;">:</span>
+                <span id="totalInactiveDetailHead" style="margin-left: 7%;">0</span>
+            </p>
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-    <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-            <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-    <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-            <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-    <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-            <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-    <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-            <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-    <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-            <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-    <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-            <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-    <div class="col">
-        <p-card header="Advanced Card" [style]="{width: '360px'}" styleClass="p-card-shadow">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-            <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
-                
-            </ng-template>
-        </p-card>
-    </div>
-</div>
 
+            </ng-template>
+        </p-card>
+    </div>
+    <div class="col">
+        <p-card header="SUB DEATIL HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total SUBDEATILHEAD 
+                <span style="margin-left: 20%;">:</span>
+                <span id="totalSubDetailHead" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active SUBDEATILHEAD 
+                <span style="margin-left: 4%;">:</span>
+                <span id="totalActiveSubDetailHead" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive SUBDEATILHEAD 
+                <span style="margin-left: 1%;">:</span>   
+                <span id="totalInactiveSubDetailHead" style="margin-left: 5%;">0</span>
+            </p>
+            <ng-template pTemplate="footer">
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                
+            </ng-template>
+        </p-card>
+    </div>
+    <div class="col">
+        <p-card header="DEPARTMENT" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total DEPARTMENT 
+                <span style="margin-left: 27%;">:</span>
+                <span id="totalDepartment" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active DEPARTMENT 
+                <span style="margin-left: 11%;">:</span>
+                <span id="totalActiveDepartment" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive DEPARTMENT 
+                <span style="margin-left: 7%;">:</span>
+                <span id="totalInactiveDepartment" style="margin-left: 5%;">0</span>
+            </p>
+            <ng-template pTemplate="footer">
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                
+            </ng-template>
+        </p-card>
+    </div>
+    <div class="col">
+        <p-card header="MAJOR HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total MAJOR HEAD 
+                <span style="margin-left: 22%;">:</span>
+                <span id="totalMajorHead" style="margin-left: 7%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active MAJOR HEAD 
+                <span style="margin-left: 6%;">:</span>
+                <span id="totalActiveMajorHead" style="margin-left: 7%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive MAJOR HEAD 
+                <span style="margin-left: 2%;">:</span>
+                <span id="totalInactiveMajorHead" style="margin-left: 7%;">0</span>
+            </p>
+            <ng-template pTemplate="footer">
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                
+            </ng-template>
+        </p-card>
+    </div>
+    <div class="col">
+        <p-card header="SCHEME HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total SCHEME HEAD 
+                <span style="margin-left: 25%;">:</span>
+                <span id="totalSchemeHead" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active SCHEME HEAD 
+                <span style="margin-left: 9%;">:</span>
+                <span id="totalActiveSchemeHead" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive SCHEME HEAD 
+                <span style="margin-left: 5.55%;">:</span>
+                <span id="totalInactiveSchemeHead" style="margin-left: 5%;">0</span>
+            </p>
+            <ng-template pTemplate="footer">
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                
+            </ng-template>
+        </p-card>
+    </div>
+    <div class="col">
+        <p-card header="Treasury" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total TREASURY 
+                <span style="margin-left: 27%;">:</span>
+                <span id="totalDepartment" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active TREASURY 
+                <span style="margin-left: 11%;">:</span>
+                <span id="totalActiveDepartment" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive TREASURY 
+                <span style="margin-left: 7%;">:</span>
+                <span id="totalInactiveDepartment" style="margin-left: 5%;">0</span>
+            </p>
+            <ng-template pTemplate="footer">
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                
+            </ng-template>
+        </p-card>
+    </div>
+    <div class="col">
+        <p-card header="MINOR HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total MINOR HEAD 
+                <span style="margin-left: 26%;">:</span>
+                <span id="totalMinorHead" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active MINOR HEAD 
+                <span style="margin-left: 10%;">:</span>
+                <span id="totalActiveMinorHead" style="margin-left: 5%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive MINOR HEAD 
+                <span style="margin-left: 6%;">:</span>
+                <span id="totalInactiveMinorHead" style="margin-left: 5%;">0</span>
+            </p>
+            <ng-template pTemplate="footer">
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                
+            </ng-template>
+        </p-card>
+    </div>
+
+    <div class="col">
+        <p-card header="SUB MAJOR HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
+            <p style="font-size: large;">Total SUBMAJORHEAD 
+                <span style="margin-left: 18%;">:</span>
+                <span id="totalSubMajorHead" style="margin-left: 2%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Active SUBMAJORHEAD 
+                <span style="margin-left: 2%;">:</span>
+                <span id="totalActiveSubMajorHead" style="margin-left: 2%;">0</span>
+            </p>
+            <p style="font-size: large;">Total Inactive SUBMAJORHEAD 
+                <span >:</span>
+                <span id="totalInactiveSubMajorHead" style="margin-left: 2%;">0</span>
+            </p>
+            <ng-template pTemplate="footer">
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                
+            </ng-template>
+        </p-card>
+    </div>
+
+</div>
+  
