--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -3,19 +3,19 @@
         <p-card header="DDO" [style]="{width: '360px'}" styleClass="p-card-shadow">
             <p style="font-size: large;">Total DDO
                 <span style="margin-left: 28%;">:</span>
-                <span id="totalDDO" style="margin-left: 7%;">0</span>
+                <span id="totalDDO" style="margin-left: 7%;">{{totalActiveDdo + totalInActiveDdo}}</span>
             </p>        
             <p style="font-size: large;">Total Active DDO
                 <span style="margin-left: 12%;">:</span>
-                <span id="totalActiveDDO" style="margin-left: 7%;">0</span>    
+                <span id="totalActiveDDO" style="margin-left: 7%;">{{totalActiveDdo}}</span>    
             </p>
             <p style="font-size: large;">Total Inactive DDO 
                 <span style="margin-left: 8%;">:</span> 
-                <span id="totalInactiveDDO" style="margin-left: 7%;">0</span>
+                <span id="totalInactiveDDO" style="margin-left: 7%;">{{totalInActiveDdo}}</span>
             </p>
            
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/masterDDO"></p-button>
             </ng-template>
         </p-card>
     </div>
@@ -24,18 +24,18 @@
         <p-card header="DETAIL HEEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
             <p style="font-size: large;">Total DETAIL HEEAD 
                 <span style="margin-left: 22%;">:</span>
-                <span id="totalDetailHead" style="margin-left: 7%;">0</span>
+                <span id="totalDetailHead" style="margin-left: 7%;">{{totalActiveDetailHead + totalInActiveDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Active DETAIL HEEAD 
                 <span style="margin-left: 6%;">:</span>
-                <span id="totalActiveDetailHead" style="margin-left: 7%;">0</span>
+                <span id="totalActiveDetailHead" style="margin-left: 7%;">{{totalActiveDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive DETAIL HEEAD 
                 <span style="margin-left: 3%;">:</span>
-                <span id="totalInactiveDetailHead" style="margin-left: 7%;">0</span>
+                <span id="totalInactiveDetailHead" style="margin-left: 7%;">{{totalInActiveDetailHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/detailHead"></p-button>
 
             </ng-template>
         </p-card>
@@ -44,18 +44,18 @@
         <p-card header="SUB DEATIL HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
             <p style="font-size: large;">Total SUBDEATILHEAD 
                 <span style="margin-left: 20%;">:</span>
-                <span id="totalSubDetailHead" style="margin-left: 5%;">0</span>
+                <span id="totalSubDetailHead" style="margin-left: 5%;">{{totalActiveSubDetailHead + totalInActiveSubDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Active SUBDEATILHEAD 
                 <span style="margin-left: 4%;">:</span>
-                <span id="totalActiveSubDetailHead" style="margin-left: 5%;">0</span>
+                <span id="totalActiveSubDetailHead" style="margin-left: 5%;">{{totalActiveSubDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive SUBDEATILHEAD 
                 <span style="margin-left: 1%;">:</span>   
-                <span id="totalInactiveSubDetailHead" style="margin-left: 5%;">0</span>
+                <span id="totalInactiveSubDetailHead" style="margin-left: 5%;">{{totalInActiveSubDetailHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/subDetailHead"></p-button>
                 
             </ng-template>
         </p-card>
@@ -64,18 +64,18 @@
         <p-card header="DEPARTMENT" [style]="{width: '360px'}" styleClass="p-card-shadow">
             <p style="font-size: large;">Total DEPARTMENT 
                 <span style="margin-left: 27%;">:</span>
-                <span id="totalDepartment" style="margin-left: 5%;">0</span>
+                <span id="totalDepartment" style="margin-left: 5%;">{{totalActiveDepartment + totalInActiveDepartment}}</span>
             </p>
             <p style="font-size: large;">Total Active DEPARTMENT 
                 <span style="margin-left: 11%;">:</span>
-                <span id="totalActiveDepartment" style="margin-left: 5%;">0</span>
+                <span id="totalActiveDepartment" style="margin-left: 5%;">{{totalActiveDepartment}}</span>
             </p>
             <p style="font-size: large;">Total Inactive DEPARTMENT 
                 <span style="margin-left: 7%;">:</span>
-                <span id="totalInactiveDepartment" style="margin-left: 5%;">0</span>
+                <span id="totalInactiveDepartment" style="margin-left: 5%;">{{totalInActiveDepartment}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/department"></p-button>
                 
             </ng-template>
         </p-card>
@@ -84,18 +84,18 @@
         <p-card header="MAJOR HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
             <p style="font-size: large;">Total MAJOR HEAD 
                 <span style="margin-left: 22%;">:</span>
-                <span id="totalMajorHead" style="margin-left: 7%;">0</span>
+                <span id="totalMajorHead" style="margin-left: 7%;">{{totalActiveMajorHead + totalInActiveMajorHead}}</span>
             </p>
             <p style="font-size: large;">Total Active MAJOR HEAD 
                 <span style="margin-left: 6%;">:</span>
-                <span id="totalActiveMajorHead" style="margin-left: 7%;">0</span>
+                <span id="totalActiveMajorHead" style="margin-left: 7%;">{{totalActiveMajorHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive MAJOR HEAD 
                 <span style="margin-left: 2%;">:</span>
-                <span id="totalInactiveMajorHead" style="margin-left: 7%;">0</span>
+                <span id="totalInactiveMajorHead" style="margin-left: 7%;">{{totalInActiveMajorHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/majorHead"></p-button>
                 
             </ng-template>
         </p-card>
@@ -104,18 +104,18 @@
         <p-card header="SCHEME HEAD" [style]="{width: '360px'}" styleClass="p-card-shadow">
             <p style="font-size: large;">Total SCHEME HEAD 
                 <span style="margin-left: 25%;">:</span>
-                <span id="totalSchemeHead" style="margin-left: 5%;">0</span>
+                <span id="totalSchemeHead" style="margin-left: 5%;">{{totalActiveSchemeHead + totalInActiveSchemeHead}}</span>
             </p>
             <p style="font-size: large;">Total Active SCHEME HEAD 
                 <span style="margin-left: 9%;">:</span>
-                <span id="totalActiveSchemeHead" style="margin-left: 5%;">0</span>
+                <span id="totalActiveSchemeHead" style="margin-left: 5%;">{{totalActiveSchemeHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive SCHEME HEAD 
                 <span style="margin-left: 5.55%;">:</span>
-                <span id="totalInactiveSchemeHead" style="margin-left: 5%;">0</span>
+                <span id="totalInactiveSchemeHead" style="margin-left: 5%;">{{totalInActiveSchemeHead}}</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/schemeHead"></p-button>
                 
             </ng-template>
         </p-card>
@@ -135,7 +135,7 @@
                 <span id="totalInactiveDepartment" style="margin-left: 5%;">0</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/treasury"></p-button>
                 
             </ng-template>
         </p-card>
@@ -155,7 +155,7 @@
                 <span id="totalInactiveMinorHead" style="margin-left: 5%;">0</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/minorhead"></p-button>
                 
             </ng-template>
         </p-card>
@@ -176,7 +176,7 @@
                 <span id="totalInactiveSubMajorHead" style="margin-left: 2%;">0</span>
             </p>
             <ng-template pTemplate="footer">
-                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"></p-button>
+                <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye" routerLink="/submajorhead"></p-button>
                 
             </ng-template>
         </p-card>
