--- a/src/app/demo/components/treasury/treasury.component.html
+++ b/src/app/demo/components/treasury/treasury.component.html
@@ -1,12 +1,18 @@
-<div class=" mb-5">
-  <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
-	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-    <h2 style="color: white;font-family: sans-serif;">Treasury Table</h2>
-    <p-button class="mb-10" (click)="showDialog()" label="ADD TREASURY">
-      <i class="pi pi-plus mr-3"></i>
-    </p-button>
-  </div>
-    <form [formGroup]="userForm" >
+<div class="card"
+  style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
+  <h2 style="color: white;font-family: sans-serif;">Treasury Table</h2>
+  <p-button class="" (click)="showDeletedData()" label="SEE DELETED TREASURY">
+    <i class="pi pi-eye mr-2"></i>
+  </p-button>
+  <p-button class="" (click)="showNormalData()" label="SEE TREASURY">
+    <i class="pi pi-eye mr-2"></i>
+  </p-button>
+  <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
+    <i class="pi pi-plus mr-2"></i>
+  </p-button>
+</div>
+    <!-- <form [formGroup]="userForm" >
     <p-dialog class="custom-dialog" header="Edit Profile" [closable]="true" [modal]="true"
         [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
   
@@ -22,9 +28,7 @@
             <div class="field col">
                 <label for="lastname2">District Code</label>
                 <input id="lastname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="districtCode">
-                <!-- <div *ngIf="userForm.get('districtCode')?.invalid && userForm.get('districtCode')?.touched" class="error">
-                    District Code is required and should not exceed 3 characters.
-                  </div> -->
+               
             </div>
           </div>
           <div class="formgrid grid">
@@ -68,19 +72,13 @@
           </ng-template>
       
     </p-dialog>
-  </form>
-  <p-toast></p-toast>
-  </div>
+  </form> -->
   
-  <mh-prime-dynamic-table
-    size="small"
-    [numberRowsShown]="10"
-    [rowsPerPageOptions]="[10, 30, 50]"
-    [data]="tableData"
-    rowSelectionMode="multiple"
-    [actionButtons]="actionButtonConfig"
-    (rowSelect)="handleRowSelection($event)"
-    (actionButtonClicked)="handleButtonClick($event)"
-    (queryParameterChange)="handQueryParameterChange($event)"
-  >
-  </mh-prime-dynamic-table>
+  
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
+<mh-prime-dynamic-table size="small" [numberRowsShown]="10"
+  [rowsPerPageOptions]="[10, 30, 50]"  [data]="tableData" rowSelectionMode="multiple" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
+  (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
+  (searchKeyChange)="handleSearch($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false">
+</mh-prime-dynamic-table>
