--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -5,6 +5,9 @@
     <p-button class="mb-10" (click)="showDialog()" label="ADD SchemeHead">
       <i class="pi pi-plus mr-3"></i>
     </p-button>
+    <p-button class="" (click)="showDeletedData()" label="SEE DELETED SCHEMEHEAD">
+      <i class="pi pi-eye mr-2"></i>
+    </p-button>
   </div>
 <div class="flex flex-wrap align-items-center justify-content-end mb-5">
     <!-- <div class="addstubutt"><p-button (click)="showDialog()"
