dashboard redundancy updated

--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -10,16 +10,17 @@
             </ng-template>
 
             <p style="font-size: large;">Total DDO
+
                 <span style="margin-left: 28%;">:</span>
-                <span id="totalDDO" style="margin-left: 7%;">{{totalActiveDdo + totalInActiveDdo}}</span>
+                <span id="totalDDO" style="margin-left: 7%;">{{allMasterData.totalActiveDdo + allMasterData.totalInactiveDdo}}</span>
             </p>
             <p style="font-size: large;">Total Active DDO
                 <span style="margin-left: 12%;">:</span>
-                <span id="totalActiveDDO" style="margin-left: 7%;">{{totalActiveDdo}}</span>
+                <span id="totalActiveDDO" style="margin-left: 7%;">{{allMasterData.totalActiveDdo}}</span>
             </p>
             <p style="font-size: large;">Total Inactive DDO
                 <span style="margin-left: 8%;">:</span>
-                <span id="totalInactiveDDO" style="margin-left: 7%;">{{totalInActiveDdo}}</span>
+                <span id="totalInactiveDDO" style="margin-left: 7%;">{{allMasterData.totalInactiveDdo}}</span>
             </p>
 
             <ng-template pTemplate="footer">
@@ -36,16 +37,16 @@
             </ng-template>
             <p style="font-size: large;">Total DETAIL HEAD
                 <span style="margin-left: 22%;">:</span>
-                <span id="totalDetailHead" style="margin-left: 7%;">{{totalActiveDetailHead +
-                    totalInActiveDetailHead}}</span>
+                <span id="totalDetailHead" style="margin-left: 7%;">{{ allMasterData.totalActiveDetailHead +
+                    allMasterData.totalInactiveDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Active DETAIL HEAD
                 <span style="margin-left: 6%;">:</span>
-                <span id="totalActiveDetailHead" style="margin-left: 7%;">{{totalActiveDetailHead}}</span>
+                <span id="totalActiveDetailHead" style="margin-left: 7%;">{{ allMasterData.totalActiveDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive DETAIL HEAD
                 <span style="margin-left: 3%;">:</span>
-                <span id="totalInactiveDetailHead" style="margin-left: 7%;">{{totalInActiveDetailHead}}</span>
+                <span id="totalInactiveDetailHead" style="margin-left: 7%;">{{allMasterData.totalInactiveDetailHead}}</span>
             </p>
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
@@ -61,16 +62,16 @@
             </ng-template>
             <p style="font-size: large;">Total SUBDEATIL HEAD
                 <span style="margin-left: 20%;">:</span>
-                <span id="totalSubDetailHead" style="margin-left: 5%;">{{totalActiveSubDetailHead +
-                    totalInActiveSubDetailHead}}</span>
+                <span id="totalSubDetailHead" style="margin-left: 5%;">{{ allMasterData.totalActiveSubDetailHead +
+                  allMasterData.totalInactiveSubDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Active SUBDEATIL HEAD
                 <span style="margin-left: 4%;">:</span>
-                <span id="totalActiveSubDetailHead" style="margin-left: 5%;">{{totalActiveSubDetailHead}}</span>
+                <span id="totalActiveSubDetailHead" style="margin-left: 5%;">{{ allMasterData.totalActiveSubDetailHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive SUBDEATIL HEAD
                 <span style="margin-left: 1%;">:</span>
-                <span id="totalInactiveSubDetailHead" style="margin-left: 5%;">{{totalInActiveSubDetailHead}}</span>
+                <span id="totalInactiveSubDetailHead" style="margin-left: 5%;">{{allMasterData. totalInactiveSubDetailHead}}</span>
             </p>
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
@@ -86,16 +87,16 @@
             </ng-template>
             <p style="font-size: large;">Total DEPARTMENT
                 <span style="margin-left: 27%;">:</span>
-                <span id="totalDepartment" style="margin-left: 5%;">{{totalActiveDepartment +
-                    totalInActiveDepartment}}</span>
+                <span id="totalDepartment" style="margin-left: 5%;">{{allMasterData. totalActiveDepartment +
+                allMasterData.    totalInactiveDepartment}}</span>
             </p>
             <p style="font-size: large;">Total Active DEPARTMENT
                 <span style="margin-left: 11%;">:</span>
-                <span id="totalActiveDepartment" style="margin-left: 5%;">{{totalActiveDepartment}}</span>
+                <span id="totalActiveDepartment" style="margin-left: 5%;">{{allMasterData.totalActiveDepartment}}</span>
             </p>
             <p style="font-size: large;">Total Inactive DEPARTMENT
                 <span style="margin-left: 7%;">:</span>
-                <span id="totalInactiveDepartment" style="margin-left: 5%;">{{totalInActiveDepartment}}</span>
+                <span id="totalInactiveDepartment" style="margin-left: 5%;">{{allMasterData. totalInactiveDepartment}}</span>
             </p>
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
@@ -111,16 +112,16 @@
             </ng-template>
             <p style="font-size: large;">Total MAJOR HEAD
                 <span style="margin-left: 22%;">:</span>
-                <span id="totalMajorHead" style="margin-left: 7%;">{{totalActiveMajorHead +
-                    totalInActiveMajorHead}}</span>
+                <span id="totalMajorHead" style="margin-left: 7%;">{{ allMasterData.totalActiveMajorHead +
+                   allMasterData. totalInactiveMajorHead}}</span>
             </p>
             <p style="font-size: large;">Total Active MAJOR HEAD
                 <span style="margin-left: 6%;">:</span>
-                <span id="totalActiveMajorHead" style="margin-left: 7%;">{{totalActiveMajorHead}}</span>
+                <span id="totalActiveMajorHead" style="margin-left: 7%;">{{ allMasterData.totalActiveMajorHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive MAJOR HEAD
                 <span style="margin-left: 2%;">:</span>
-                <span id="totalInactiveMajorHead" style="margin-left: 7%;">{{totalInActiveMajorHead}}</span>
+                <span id="totalInactiveMajorHead" style="margin-left: 7%;">{{allMasterData.  totalInactiveMajorHead}}</span>
             </p>
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
@@ -136,16 +137,16 @@
             </ng-template>
             <p style="font-size: large;">Total SCHEME HEAD
                 <span style="margin-left: 25%;">:</span>
-                <span id="totalSchemeHead" style="margin-left: 5%;">{{totalActiveSchemeHead +
-                    totalInActiveSchemeHead}}</span>
+                <span id="totalSchemeHead" style="margin-left: 5%;">{{ allMasterData.totalActiveSchemeHead +
+                allMasterData.    totalInactiveSchemeHead}}</span>
             </p>
             <p style="font-size: large;">Total Active SCHEME HEAD
                 <span style="margin-left: 9%;">:</span>
-                <span id="totalActiveSchemeHead" style="margin-left: 5%;">{{totalActiveSchemeHead}}</span>
+                <span id="totalActiveSchemeHead" style="margin-left: 5%;">{{allMasterData. totalActiveSchemeHead}}</span>
             </p>
             <p style="font-size: large;">Total Inactive SCHEME HEAD
                 <span style="margin-left: 5.55%;">:</span>
-                <span id="totalInactiveSchemeHead" style="margin-left: 5%;">{{totalInActiveSchemeHead}}</span>
+                <span id="totalInactiveSchemeHead" style="margin-left: 5%;">{{ allMasterData.totalInactiveSchemeHead}}</span>
             </p>
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
@@ -161,16 +162,16 @@
             </ng-template>
             <p style="font-size: large;">Total TREASURY
                 <span style="margin-left: 27%;">:</span>
-                <span id="totalDepartment" style="margin-left: 5%;">{{totalActiveTreasury +
-                    totalInActiveTreasury}}</span>
+                <span id="totalDepartment" style="margin-left: 5%;">{{allMasterData.totalActiveTreasury +
+                 allMasterData.   totalInactiveTreasury}}</span>
             </p>
             <p style="font-size: large;">Total Active TREASURY
                 <span style="margin-left: 11%;">:</span>
-                <span id="totalActiveDepartment" style="margin-left: 5%;">{{totalActiveTreasury}}</span>
+                <span id="totalActiveDepartment" style="margin-left: 5%;">{{ allMasterData.totalActiveTreasury}}</span>
             </p>
             <p style="font-size: large;">Total Inactive TREASURY
                 <span style="margin-left: 7%;">:</span>
-                <span id="totalInactiveDepartment" style="margin-left: 5%;">{{totalInActiveTreasury}}</span>
+                <span id="totalInactiveDepartment" style="margin-left: 5%;">{{ allMasterData.totalInactiveTreasury}}</span>
             </p>
             <ng-template pTemplate="footer">
                 <p-button label="View Details" [style]="{'width': '23.3rem'}" icon="pi pi-eye"
