--- a/src/app/demo/components/department/department.component.html
+++ b/src/app/demo/components/department/department.component.html
@@ -177,5 +177,5 @@
 <mh-prime-dynamic-table size="small" [numberRowsShown]="10"
   [rowsPerPageOptions]="[10, 30, 50]" [data]="tableData" rowSelectionMode="multiple"
   [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
-  (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)">
+  (actionButtonClicked)="handleButtonClick($event)"  [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false" (queryParameterChange)="handQueryParameterChange($event)">
 </mh-prime-dynamic-table>
