--- a/src/app/demo/components/masterForms/master-minorhead-forms/master-minorhead-forms.component.html
+++ b/src/app/demo/components/masterForms/master-minorhead-forms/master-minorhead-forms.component.html
@@ -17,7 +17,7 @@
             </div>        -->
             <div class="mb-4 mt-3">
                 <label class="text-2xl" for="firstname2">Select SubMajorHead <span class="red"> *</span> : </label>
-                <p-dropdown class="ml-3" [style]="{'width':'60%'}" [options]="codes" formControlName="SubMajorHeadCode"
+                <p-dropdown class="ml-3" [style]="{'width':'60%'}"[virtualScroll]="true" [virtualScrollItemSize]="35" [options]="codes" formControlName="SubMajorHeadCode"
                     placeholder="Select Treasury" optionLabel="name" optionValue="id">
                     <ng-template let-option pTemplate="item">
                         {{ option.code }} : {{ option.name }}
