--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -2,129 +2,23 @@
   style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
   <h2 style="color: white;font-family: sans-serif;">DDO Table</h2>
-  <!-- <p-button class="" (click)="showDeletedData()" label="SEE DELETED DDO">
-    <i class="pi pi-eye mr-2"></i>
-  </p-button>
-  <p-button class="" (click)="showNormalData()" label="SEE DDO">
-    <i class="pi pi-eye mr-2"></i>
-  </p-button> -->
   <p-button class="mb-10" (click)="show()" label="ADD DDO">
     <i class="pi pi-plus mr-2"></i>
   </p-button>
 </div>
 
-<!-- <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
-</div> -->
-<!-- <div class="flex flex-wrap align-items-center justify-content-end mb-5">
-  
-  <form [formGroup]="userForm">
-    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true" [(visible)]="visible"
-      [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
-
-      <div class="mb-4 mt-3">
-        <label class="text-2xl" for="firstname2">Select Treasury <span class="red"> *</span> : </label>
-        <p-dropdown class="ml-3" [style]="{'width':'72%'}" [options]="codes" formControlName="TreasuryCode"
-          placeholder="Select Treasury" optionLabel="name" optionValue="code" (onChange)="getTcode()">
-          <ng-template let-option pTemplate="item">
-            {{ option.code }} : {{ option.name }}
-          </ng-template>
-        </p-dropdown>
-        <div *ngIf="userForm.get('TreasuryCode')?.invalid && userForm.get('TreasuryCode')?.touched" class="error">
-          Treasury Code is required.
-        </div>
-      </div>
-      <div class="formgrid grid">
-        <div class="field col">
-          <label class="text-2xl" for="firstname2">DDO Code<span class="red"> *</span> :</label>
-          <input id="firstname2" type="text" [value]="getTCode"
-            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-            formControlName="Code">
-          <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
-            Code is required.
-          </div>
-        </div>
-        <div class="field col">
-          <label class="text-2xl" for="firstname2">Phone<span class="red"> *</span> :</label>
-          <input id="firstname2" type="text"
-            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-            formControlName="Phone">
-          <div *ngIf="userForm.get('Phone')?.invalid && userForm.get('Phone')?.touched" class="error">
-            Phone is required.
-          </div>
-        </div>
-      </div>
-
-      <div class="formgrid grid">
-        <div class="field col">
-          <label class="text-2xl" for="firstname2">Designation<span class="red"> *</span> :</label>
-          <input id="firstname2" type="text"
-            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-            formControlName="Designation">
-          <div *ngIf="userForm.get('Designation')?.invalid && userForm.get('Designation')?.touched" class="error">
-            Designation is required.
-          </div>
-        </div>
-      </div>
-
-      <div class="formgrid grid">
-        <div class="field col">
-          <label class="text-2xl" for="firstname2">Address :</label>
-          <input id="firstname2" type="text"
-            class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-            formControlName="Address">
-        </div>
-      </div>
-
-
-      <div class="button-container" *ngIf="(dialogButts == 1); else elseBlock1">
-        <div class="formgrid grid">
-          <div class="col-9">
-            <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-              icon="pi pi-times" iconPos="left" styleClass="p-button-warning" (click)="cancel(userForm)"></p-button>
-          </div>
-          <div class="field col">
-            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4"
-              styleClass="p-button-success" label="Submit" icon="pi pi-check" iconPos="left"
-              (click)="submit(userForm)"></p-button>
-          </div>
-        </div>
-      </div>
-      <ng-template #elseBlock1>
-        <div class="button-container" *ngIf="(dialogButts == 2); else elseBlock2">
-          <div class="formgrid grid">
-            <div class="col-9">
-              <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-                icon="pi pi-times" iconPos="left" styleClass="p-button-warning" (click)="cancel(userForm)"></p-button>
-            </div>
-            <div class="field col">
-              <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
-                icon="pi pi-check" iconPos="left" styleClass="p-button-success" (click)="update(userForm)"></p-button>
-            </div>
-          </div>
-        </div>
-      </ng-template>
-      <ng-template #elseBlock2>
-        <div class="button-container" *ngIf="(dialogButts == 3)">
-          <div class="formgrid grid">
-            <div class="col">
-              <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Close"
-                icon="pi pi-times" iconPos="left" (click)="hide(userForm)"></p-button>
-            </div>
-          </div>
-        </div>
-      </ng-template>
-      
-
-    </p-dialog>
-  </form>
-  
-</div> -->
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
   <p-tabView (onChange)="handleChange($event)">
-      <p-tabPanel header="Active DDO" [tooltip]="totalActiveDdo">
+      <p-tabPanel header="Active DDO ({{totalActiveDdo}})" [tooltip]="totalActiveDdo">
+        <p>
+          There are {{totalActiveDdo}} DDO's are active out of {{totalActiveDdo + totalInactiveDdo}} DDO's given below.
+        </p>
       </p-tabPanel>
-      <p-tabPanel header="Inactive DDO" [tooltip]="totalInactiveDdo">
+      <p-tabPanel header="Inactive DDO ({{totalInactiveDdo}})" [tooltip]="totalInactiveDdo">
+        <p>
+          There are {{totalInactiveDdo}} DDO's are inactive out of {{totalActiveDdo + totalInactiveDdo}} DDO's given below.
+        </p>
       </p-tabPanel>
   </p-tabView>
   
@@ -133,8 +27,3 @@
   (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
   (searchKeyChange)="handleSearch($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false">
 </mh-prime-dynamic-table>
-
-<!-- <app-masterddodialog></app-masterddodialog> -->
-
-<!-- <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Close"
-                icon="pi pi-times" iconPos="left" routerLink="/ddoDialog"></p-button> -->
