tab view added in scheme head

--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -5,12 +5,12 @@
     <p-button class="mb-10" (click)="showDialog()" label="ADD SchemeHead">
       <i class="pi pi-plus mr-3"></i>
     </p-button>
-    <p-button class="" (click)="showNormalData()" label="SEE SchemeHead">
+    <!-- <p-button class="" (click)="showNormalData()" label="SEE SchemeHead">
       <i class="pi pi-eye mr-2"></i>
     </p-button>
     <p-button class="" (click)="showDeletedData()" label="SEE DELETED SCHEMEHEAD">
       <i class="pi pi-eye mr-2"></i>
-    </p-button>
+    </p-button> -->
   </div>
 <div class="flex flex-wrap align-items-center justify-content-end mb-5">
     <!-- <div class="addstubutt"><p-button (click)="showDialog()"
@@ -83,7 +83,12 @@
   <p-toast></p-toast>
   </div>
   <p-confirmDialog></p-confirmDialog>
-  
+  <p-tabView (onChange)="handleChange($event)">
+    <p-tabPanel header="Active SchemeHead" [tooltip]="totalActiveSchemeHead">
+    </p-tabPanel>
+    <p-tabPanel header="Inactive SchemeHead" [tooltip]="totalInactiveSchemeHead">
+    </p-tabPanel>
+</p-tabView>
   <mh-prime-dynamic-table 
     size="small"
     [numberRowsShown]="10"
